# wgpu-obj-example

./: Cargo.toml
examples/: geom1.rs
src/: framework.rs  lib.rs  main.rs  objs.rs  shader.wgsl
src/objs/: cube.rs  cylinder.rs  donut.rs  geom.rs  plane.rs  sphere.rs
